# car_dmg_seg

./: .env.example  .gitignore  INFERENCE_README.md  main.py  pyproject.toml
classical_ml/: data_loader.py  hog.ipynb  plan.md  sliding_window.ipynb
dataset/test/: _annotations.coco.json
dino/: dinov3_convnext.ipynb
inference/: __init__.py  dependencies.py  main.py  settings.py
inference/models/: __init__.py  detection.py
inference/services/: __init__.py  inference_service.py  livekit_service.py
rf-detr/: rf-detr.ipynb
yolo/: demo.py  settings.py  yolo-det.ipynb  yolo-seg.ipynb  yolo.ipynb
