[project]
name = "car-dmg-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorgram-py>=1.2.0",
    "extcolors>=1.0.0",
    "notebook>=7.5.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pycocotools>=2.0.10",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
